Fix first row display on narrow screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -286,6 +286,7 @@ td, th {
 .top td { height: 30px; }
 
 .entry {
+  display: block;
   width: 100%;
   height: 100%;
   border: 0;
@@ -295,6 +296,7 @@ td, th {
   font: inherit;
   font-size: inherit;
   font-weight: 500;
+  line-height: 1.2;
   text-align: inherit;
   padding: 3px 6px;
   outline: none;
@@ -497,6 +499,14 @@ textarea.entry {
 
   .entry {
     font-size: 16px;
+  }
+
+  .items th {
+    height: 32px;
+  }
+
+  .items td {
+    height: 38px;
   }
 
   #candidateView .list-panel {
